--- a/src/Views/ConsulterEnfant.fxml
+++ b/src/Views/ConsulterEnfant.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" fx:id="root" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #046380;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.ConsulterEnfantController">
+<AnchorPane id="AnchorPane" fx:id="root" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #046380;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ConsulterEnfantController">
   <children>
       <TableView fx:id="afficher" layoutX="175.0" layoutY="69.0" prefHeight="279.0" prefWidth="408.0">
         <columns>
