--- a/src/Views/Emna/AjoutEvenement.fxml
+++ b/src/Views/Emna/AjoutEvenement.fxml
@@ -46,7 +46,7 @@
                   <Font size="17.0" />
                </font>
             </Label>
-            <Button fx:id="ajout_bt" layoutX="250.0" layoutY="556.0" mnemonicParsing="false" text="Ajouter" textFill="#ff2dce" />
+            <Button fx:id="ajout_bt" layoutX="250.0" layoutY="556.0" mnemonicParsing="false" text="Ajouter" textFill="#a81e75" />
             <ListView fx:id="list_jardin" layoutX="145.0" layoutY="478.0" prefHeight="55.0" prefWidth="139.0" />
             <ListView fx:id="list_cat" layoutX="146.0" layoutY="416.0" prefHeight="55.0" prefWidth="139.0" />
          </children>
