--- a/src/Views/AjouterEnfant.fxml
+++ b/src/Views/AjouterEnfant.fxml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.AjouterEnfantController">
-    
+
+<AnchorPane id="AnchorPane" fx:id="root" prefHeight="443.0" prefWidth="657.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="views.AjouterEnfantController">
+   <children>
+      <TableView fx:id="afficher" layoutX="63.0" layoutY="48.0" prefHeight="279.0" prefWidth="564.0">
+         <columns>
+            <TableColumn fx:id="nom" prefWidth="75.0" text="Nom" />
+            <TableColumn fx:id="prenom" prefWidth="89.60003662109375" text="Prenom" />
+            <TableColumn fx:id="date" prefWidth="117.5999755859375" text="Date Naissance" />
+            <TableColumn fx:id="etat" prefWidth="92.800048828125" text="Etat" />
+            <TableColumn fx:id="type" prefWidth="93.60000610351562" text="Type" />
+            <TableColumn fx:id="dateex" prefWidth="92.0" text="Date Expiration" />
+         </columns>
+      </TableView>
+      <Button fx:id="ajou" layoutX="218.0" layoutY="351.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="79.0" text="Ajouter" />
+      <Button fx:id="supp" layoutX="352.0" layoutY="352.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="79.0" text="Supprimer" />
+   </children>
 </AnchorPane>
