--- a/src/Views/ModifyActivite.fxml
+++ b/src/Views/ModifyActivite.fxml
@@ -1,30 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-
-<AnchorPane id="AnchorPane" fx:id="root" prefHeight="521.0" prefWidth="600.0" style="-fx-background-color: #046380;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="views.ModifyActiviteController">
+<AnchorPane id="AnchorPane" fx:id="root" prefHeight="521.0" prefWidth="600.0" style="-fx-background-color: #046380;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ModifyActiviteController">
    <children>
       <Pane layoutX="35.0" layoutY="23.0" prefHeight="476.0" prefWidth="531.0" style="-fx-background-color: #FFFF;">
          <children>
-            <Label layoutX="201.0" layoutY="109.0" text="Activité" />
-            <Label layoutX="203.0" layoutY="145.0" text="Description" />
-            <Label layoutX="208.0" layoutY="320.0" text="Date" />
-            <TextField fx:id="act_label" layoutX="290.0" layoutY="105.0" prefHeight="25.0" prefWidth="200.0" />
-            <TextArea fx:id="description_label" layoutX="290.0" layoutY="153.0" prefHeight="147.0" prefWidth="200.0" />
-            <DatePicker fx:id="date_picker" layoutX="303.0" layoutY="316.0" />
-            <Button fx:id="mod_btn" layoutX="409.0" layoutY="359.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="91.0" text="Modifier" />
-            <Button fx:id="vider_btn" layoutX="314.0" layoutY="359.0" mnemonicParsing="false" text="vider" />
-            <Label layoutX="39.0" layoutY="46.0" prefHeight="34.0" prefWidth="138.0" text=" Nom de l'activité" />
-            <Button layoutX="356.0" layoutY="49.0" mnemonicParsing="false" text="Trouver" />
-            <ChoiceBox layoutX="158.0" layoutY="50.0" prefWidth="150.0" />
+            <Label layoutX="107.0" layoutY="97.0" text="Activité" />
+            <Label layoutX="96.0" layoutY="145.0" text="Description" />
+            <Label layoutX="114.0" layoutY="275.0" text="Date" />
+            <TextField fx:id="act_label" layoutX="163.0" layoutY="93.0" prefHeight="25.0" prefWidth="200.0" />
+            <TextArea fx:id="description_label" layoutX="166.0" layoutY="145.0" prefHeight="105.0" prefWidth="200.0" />
+            <Button fx:id="mod_btn" layoutX="221.0" layoutY="421.0" mnemonicParsing="false" onAction="#Modifier" prefHeight="34.0" prefWidth="91.0" text="Modifier" />
+            <Button fx:id="vider_btn" layoutX="390.0" layoutY="381.0" mnemonicParsing="false" onAction="#Vider" prefHeight="17.0" prefWidth="119.0" text="vider les champs" />
+            <Label layoutX="38.0" layoutY="34.0" prefHeight="34.0" prefWidth="138.0" text=" Nom de l'activité" />
+            <Button layoutX="340.0" layoutY="43.0" mnemonicParsing="false" onAction="#Trouver" text="Trouver" />
+            <TextField fx:id="date_picker" layoutX="191.0" layoutY="271.0" />
+            <ComboBox fx:id="Recherche" layoutX="158.0" layoutY="39.0" prefWidth="150.0" />
+            <Button fx:id="supp_btn" layoutX="125.0" layoutY="421.0" mnemonicParsing="false" onAction="#Supprimer" prefHeight="34.0" prefWidth="76.0" text="Supprimer" />
+            <Button fx:id="annuler_btn" layoutX="31.0" layoutY="421.0" mnemonicParsing="false" onAction="#Retour" prefHeight="34.0" prefWidth="76.0" text="Annuler" />
+            <Label layoutX="112.0" layoutY="333.0" text="Club : " />
+            <ComboBox fx:id="club_box" layoutX="188.0" layoutY="329.0" prefWidth="150.0" />
          </children>
       </Pane>
    </children>
