--- a/src/Views/Emna/ConsulterListeEvenements.fxml
+++ b/src/Views/Emna/ConsulterListeEvenements.fxml
@@ -7,14 +7,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="589.0" prefWidth="674.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Emna.ConsulterListeEvenementsController">
+<AnchorPane id="AnchorPane" prefHeight="589.0" prefWidth="674.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Emna.ConsulterListeEvenementsController">
    <children>
       <AnchorPane fx:id="root" layoutX="52.0" layoutY="117.0" prefHeight="431.0" prefWidth="571.0" style="-fx-background-color: D7D7D7;">
          <children>
             <TableView fx:id="TV_le" layoutX="121.0" layoutY="69.0" prefHeight="294.0" prefWidth="329.0">
               <columns>
                 <TableColumn fx:id="col_titre" prefWidth="119.0" text="Titre" />
-                <TableColumn fx:id="col_cat" prefWidth="94.0" text="Categorie" />
+                <TableColumn fx:id="col_cat" prefWidth="94.0" text="Description" />
                   <TableColumn fx:id="col_date" prefWidth="115.0" text="Date" />
               </columns>
             </TableView>
