--- a/src/Views/Chauffeurs/Consulter.fxml
+++ b/src/Views/Chauffeurs/Consulter.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TableColumn?>
@@ -12,13 +13,12 @@
 
 <AnchorPane id="AnchorPane" prefHeight="533.0" prefWidth="795.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Chauffeurs.ConsulterController">
    <children>
-      <ListView fx:id="listview" layoutX="14.0" prefHeight="533.0" prefWidth="208.0" />
-      <AnchorPane fx:id="info" layoutX="242.0" layoutY="47.0" prefHeight="487.0" prefWidth="539.0" style="-fx-border-color: #c71ec3; -fx-border-radius: 20px; -fx-border-width: 4;" visible="false">
+      <ListView fx:id="listview" layoutX="14.0" layoutY="46.0" prefHeight="487.0" prefWidth="208.0" />
+      <AnchorPane fx:id="info" layoutX="243.0" layoutY="47.0" prefHeight="487.0" prefWidth="539.0" style="-fx-border-color: #c71ec3; -fx-border-radius: 20px; -fx-border-width: 4;" visible="false">
          <children>
             <TextField fx:id="nom" layoutX="106.0" layoutY="123.0" />
             <TextField fx:id="cin" layoutX="106.0" layoutY="74.0" />
             <TextField fx:id="tel" layoutX="106.0" layoutY="222.0" />
-            <TextField fx:id="sexe" layoutX="106.0" layoutY="173.0" />
             <Label layoutX="167.0" layoutY="51.0" text="CIN" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="12.0" />
@@ -63,10 +63,13 @@
                </font>
             </Label>
             <TextField fx:id="adresse" layoutX="360.0" layoutY="348.0" />
-            <TextField fx:id="heure" layoutX="360.0" layoutY="400.0" />
             <Button fx:id="affecter" layoutX="388.0" layoutY="435.0" mnemonicParsing="false" onAction="#affecter" prefHeight="25.0" prefWidth="92.0" text="Affecter" />
             <Label layoutX="413.0" layoutY="329.0" text="Adresse" textFill="WHITE" />
             <Label layoutX="418.0" layoutY="380.0" text="Heure" textFill="WHITE" />
+            <ComboBox fx:id="hh" layoutX="356.0" layoutY="398.0" prefHeight="25.0" prefWidth="65.0" promptText="Heu" />
+            <ComboBox fx:id="mm" layoutX="448.0" layoutY="398.0" prefHeight="25.0" prefWidth="65.0" promptText="Min" />
+            <Label layoutX="430.0" layoutY="402.0" text="H" textFill="WHITE" />
+            <ComboBox fx:id="sexe" layoutX="106.0" layoutY="174.0" prefHeight="25.0" prefWidth="149.0" />
          </children>
       </AnchorPane>
       <Button fx:id="ajouter" layoutX="242.0" layoutY="14.0" mnemonicParsing="false" onAction="#activer" prefHeight="25.0" prefWidth="92.0" text="Ajouter" />
@@ -88,10 +91,12 @@
             <Label layoutX="190.0" layoutY="230.0" text="Tel" textFill="WHITE" />
             <TextField fx:id="cin_a" layoutX="129.0" layoutY="98.0" />
             <TextField fx:id="nom_a" layoutX="129.0" layoutY="149.0" />
-            <TextField fx:id="sexe_a" layoutX="130.0" layoutY="200.0" />
             <TextField fx:id="tel_a" layoutX="130.0" layoutY="251.0" />
             <Button layoutX="158.0" layoutY="302.0" mnemonicParsing="false" onAction="#ajouter" prefHeight="25.0" prefWidth="92.0" text="Ajouter" />
+            <ComboBox fx:id="sexe_a" layoutX="131.0" layoutY="203.0" prefHeight="25.0" prefWidth="149.0" />
          </children>
       </Pane>
+      <TextField fx:id="search" layoutX="14.0" layoutY="21.0" onKeyTyped="#chercher" prefHeight="25.0" prefWidth="208.0" promptText="Chercher ..." />
+      <Button fx:id="map" layoutX="345.0" layoutY="14.0" mnemonicParsing="false" onAction="#map" prefHeight="25.0" prefWidth="92.0" text="Map" />
    </children>
 </AnchorPane>
