--- a/src/Views/AjoutActivite.fxml
+++ b/src/Views/AjoutActivite.fxml
@@ -8,23 +8,25 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Line?>
 
-
-<AnchorPane id="AnchorPane" fx:id="root" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #046380;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="Views.AjoutActiviteController">
+<AnchorPane id="AnchorPane" fx:id="root" prefHeight="524.0" prefWidth="689.0" style="-fx-background-color: #84869c;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.AjoutActiviteController">
    <children>
-      <Pane layoutX="22.0" layoutY="28.0" prefHeight="351.0" prefWidth="557.0" style="-fx-background-color: #FFFF;">
+      <Pane layoutY="70.0" prefHeight="403.0" prefWidth="691.0" style="-fx-background-color: #393d72;">
          <children>
-            <Label layoutX="31.0" layoutY="51.0" text="Activité : " />
-            <Label layoutX="31.0" layoutY="97.0" text="Description : " />
-            <Label layoutX="31.0" layoutY="221.0" text="Date : " />
-            <Label layoutX="316.0" layoutY="52.0" text="Club : " />
-            <TextField fx:id="act_text" layoutX="121.0" layoutY="48.0" prefHeight="25.0" prefWidth="159.0" />
-            <TextArea fx:id="desc_text" layoutX="121.0" layoutY="99.0" prefHeight="102.0" prefWidth="159.0" />
-            <DatePicker fx:id="date_text" layoutX="121.0" layoutY="226.0" prefHeight="25.0" prefWidth="159.0" />
-            <ComboBox fx:id="club_box" layoutX="376.0" layoutY="47.0" prefWidth="150.0" />
-            <Button fx:id="annuler_btn" layoutX="372.0" layoutY="289.0" mnemonicParsing="false" onAction="#Annuler" prefHeight="33.0" prefWidth="69.0" text="Annuler" />
-            <Button fx:id="ajout_btn" layoutX="457.0" layoutY="289.0" mnemonicParsing="false" onAction="#ADD" prefHeight="33.0" prefWidth="69.0" text="Ajouter" />
+            <Label layoutX="220.0" layoutY="43.0" text="Activité : " textFill="WHITE" />
+            <Label layoutX="220.0" layoutY="88.0" text="Description : " textFill="WHITE" />
+            <Label layoutX="220.0" layoutY="252.0" text="Date : " textFill="WHITE" />
+            <TextField fx:id="act_text" layoutX="300.0" layoutY="39.0" prefHeight="25.0" prefWidth="159.0" />
+            <TextArea fx:id="desc_text" layoutX="300.0" layoutY="88.0" prefHeight="121.0" prefWidth="159.0" />
+            <DatePicker fx:id="date_text" layoutX="300.0" layoutY="248.0" prefHeight="25.0" prefWidth="159.0" />
+            <Line endX="591.0" layoutX="100.0" startX="-100.0" stroke="#6f6a5d" strokeWidth="3.0" />
+            <Line endX="590.0" layoutX="100.0" layoutY="403.0" startX="-100.0" stroke="#6f6a5d" strokeWidth="3.0" />
          </children>
       </Pane>
+      <Button fx:id="annuler_btn" layoutX="469.0" layoutY="480.0" mnemonicParsing="false" onAction="#Annuler" prefHeight="33.0" prefWidth="89.0" text="Annuler" />
+      <Button fx:id="ajout_btn" layoutX="574.0" layoutY="480.0" mnemonicParsing="false" onAction="#ADD" prefHeight="33.0" prefWidth="89.0" text="Ajouter" />
+      <ComboBox fx:id="club_box" layoutX="132.0" layoutY="34.0" prefWidth="150.0" />
+      <Label layoutX="64.0" layoutY="38.0" text="Club : " textFill="WHITE" />
    </children>
 </AnchorPane>
