--- a/src/Views/Club/AjoutClub.fxml
+++ b/src/Views/Club/AjoutClub.fxml
@@ -7,21 +7,37 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" fx:id="root" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #046380;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="Views.Club.AjoutClubController">
+<AnchorPane id="AnchorPane" fx:id="root" prefHeight="524.0" prefWidth="689.0" style="-fx-background-color: #84869c;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Club.AjoutClubController">
    <children>
-      <Pane layoutX="16.0" layoutY="18.0" prefHeight="367.0" prefWidth="572.0" style="-fx-background-color: #FFFF;">
+      <Pane fx:id="stage" layoutY="61.0" prefHeight="403.0" prefWidth="689.0" style="-fx-background-color: #393d72;">
          <children>
-            <Label layoutX="78.0" layoutY="38.0" text="Nom du Club :" />
-            <Label layoutX="83.0" layoutY="88.0" text="Description :" />
-            <Label layoutX="103.0" layoutY="184.0" text="Image : " />
-            <Button layoutX="195.0" layoutY="310.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="66.0" text="Annuler" />
-            <Button fx:id="ajouter_btn" layoutX="342.0" layoutY="310.0" mnemonicParsing="false" onAction="#Ajouter" prefHeight="25.0" prefWidth="66.0" text="Ajouter" />
-            <TextArea fx:id="description_text" layoutX="201.0" layoutY="79.0" prefHeight="78.0" prefWidth="200.0" />
-            <TextField fx:id="club_text" layoutX="227.0" layoutY="34.0" />
-            <ImageView fx:id="image" fitHeight="124.0" fitWidth="160.0" layoutX="221.0" layoutY="165.0" pickOnBounds="true" preserveRatio="true" />
+            <Label layoutX="163.0" layoutY="30.0" text="Nom du Club :" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+            <Label layoutX="163.0" layoutY="88.0" text="Description :" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+            <Label layoutX="163.0" layoutY="193.0" text="Image : " textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+            <TextArea fx:id="description_text" layoutX="282.0" layoutY="72.0" prefHeight="78.0" prefWidth="200.0" />
+            <TextField fx:id="club_text" layoutX="308.0" layoutY="26.0" />
+            <ImageView fx:id="imageview" fitHeight="166.0" fitWidth="200.0" layoutX="282.0" layoutY="216.0" pickOnBounds="true" preserveRatio="true" />
+            <Button fx:id="image_btn" layoutX="281.0" layoutY="181.0" mnemonicParsing="false" onAction="#uploadImage" text="Browse" />
+            <TextField fx:id="image_area" layoutX="408.0" layoutY="238.0" visible="false" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c8cade22" height="178.0" layoutX="282.0" layoutY="210.0" stroke="#6f6a5d" strokeType="INSIDE" width="200.0" />
+            <Line endX="588.0" layoutX="101.0" layoutY="403.0" startX="-100.0" stroke="#6f6a5d" strokeWidth="4.0" />
          </children>
       </Pane>
+      <Button fx:id="ajouter_btn" layoutX="579.0" layoutY="472.0" mnemonicParsing="false" onAction="#Ajouter" prefHeight="33.0" prefWidth="90.0" text="Ajouter" />
+      <Button fx:id="annuler_btn" layoutX="478.0" layoutY="472.0" mnemonicParsing="false" onAction="#ANNULER" prefHeight="33.0" prefWidth="90.0" text="Annuler" />
+      <Line endX="588.0" layoutX="101.0" layoutY="61.0" startX="-100.0" stroke="#6f6a5d" strokeWidth="4.0" />
    </children>
 </AnchorPane>
