--- a/src/Views/ConsulterActivite.fxml
+++ b/src/Views/ConsulterActivite.fxml
@@ -3,38 +3,42 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="root" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #046380;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ConsulterActiviteController">
+<AnchorPane id="AnchorPane" fx:id="root" prefHeight="524.0" prefWidth="689.0" style="-fx-background-color: #84869c;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ConsulterActiviteController">
    <children>
-      <SplitPane dividerPositions="0.28014842300556586" layoutX="29.0" layoutY="25.0" prefHeight="356.0" prefWidth="541.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="354.0" prefWidth="128.0">
-               <children>
-                  <Button layoutX="14.0" layoutY="77.0" mnemonicParsing="false" onAction="#Afficher" prefHeight="34.0" prefWidth="104.0" text="Affichage" />
-                  <Button fx:id="btn" layoutX="14.0" layoutY="122.0" mnemonicParsing="false" onAction="#redirect" prefHeight="34.0" prefWidth="104.0" text="Ajouter" />
-                  <Button fx:id="modifier_btn" layoutX="14.0" layoutY="168.0" mnemonicParsing="false" onAction="#redirect2" prefHeight="34.0" prefWidth="104.0" text="Modifier" />
-                  <Button fx:id="Club_btn" layoutX="19.0" layoutY="285.0" mnemonicParsing="false" onAction="#TakeMeToClub" prefHeight="34.0" prefWidth="97.0" text="Club" />
-               </children>
-            </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #FFFF;">
-               <children>
-                  <TableView fx:id="tableAct" layoutX="14.0" layoutY="85.0" prefHeight="240.0" prefWidth="338.0">
-                    <columns>
-                      <TableColumn fx:id="activite" prefWidth="112.0" text="Activite" />
-                      <TableColumn fx:id="description" prefWidth="118.0" text="Description" />
-                        <TableColumn fx:id="date" prefWidth="107.0" text="Date" />
-                    </columns>
-                  </TableView>
-                  <Label layoutX="22.0" layoutY="38.0" text="Choisir le Club : " />
-                  <ComboBox fx:id="club_box" layoutX="121.0" layoutY="34.0" prefWidth="150.0" />
-                  <Button fx:id="det_btn" layoutX="290.0" layoutY="34.0" mnemonicParsing="false" onAction="#Detail" prefHeight="25.0" prefWidth="61.0" text="Afficher" />
-               </children>
-            </AnchorPane>
-        </items>
-      </SplitPane>
+      <Button fx:id="Club_btn" layoutX="573.0" layoutY="447.0" mnemonicParsing="false" onAction="#TakeMeToClub" prefHeight="25.0" prefWidth="97.0" text="Club" />
+      <Button fx:id="modifier_btn" layoutX="558.0" layoutY="206.0" mnemonicParsing="false" onAction="#redirect2" prefHeight="25.0" prefWidth="125.0" text="Modifier" />
+      <Button fx:id="btn" layoutX="557.0" layoutY="172.0" mnemonicParsing="false" onAction="#redirect" prefHeight="25.0" prefWidth="125.0" text="Ajouter" />
+      <ComboBox fx:id="club_box" layoutX="172.0" layoutY="23.0" prefWidth="150.0" />
+      <Button fx:id="det_btn" layoutX="336.0" layoutY="23.0" mnemonicParsing="false" onAction="#Detail" prefHeight="25.0" prefWidth="61.0" text="Afficher" />
+      <Label layoutX="63.0" layoutY="27.0" text="Choisir le Club : " textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Pane layoutY="63.0" prefHeight="461.0" prefWidth="549.0" style="-fx-background-color: #393d72;">
+         <children>
+            <TableView fx:id="tableAct" layoutX="25.0" layoutY="53.0" prefHeight="394.0" prefWidth="500.0">
+              <columns>
+                <TableColumn fx:id="activite" prefWidth="153.0" text="Activite" />
+                <TableColumn fx:id="description" prefWidth="183.0" text="Description" />
+                  <TableColumn fx:id="date" prefWidth="163.0" text="Date" />
+              </columns>
+            </TableView>
+            <Line endX="-96.0" endY="460.0" layoutX="645.0" layoutY="1.0" startX="-96.0" startY="1.1213226318359375" stroke="#6f6a5d" strokeWidth="3.0" />
+            <TextField fx:id="search_txt" layoutX="285.0" layoutY="14.0" prefHeight="17.0" prefWidth="149.0" />
+            <Button layoutX="456.0" layoutY="14.0" mnemonicParsing="false" onAction="#Search" text="Search" />
+         </children>
+      </Pane>
+      <Line endX="440.0" endY="1.0" layoutX="109.0" layoutY="62.0" startX="-109.0" startY="1.0" stroke="#6f6a5d" strokeWidth="3.0" />
+      <Button fx:id="qr" layoutX="558.0" layoutY="269.0" mnemonicParsing="false" onAction="#qrCode" prefHeight="25.0" prefWidth="125.0" text="QR" />
+      <Button fx:id="weather_btn" layoutX="558.0" layoutY="304.0" mnemonicParsing="false" onAction="#TakeMeToWeather" prefHeight="25.0" prefWidth="125.0" text="WEATHER" />
    </children>
 </AnchorPane>
