--- a/src/Views/ModifyActivite.fxml
+++ b/src/Views/ModifyActivite.fxml
@@ -7,27 +7,47 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="root" prefHeight="521.0" prefWidth="600.0" style="-fx-background-color: #046380;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ModifyActiviteController">
+<AnchorPane id="AnchorPane" fx:id="root" prefHeight="524.0" prefWidth="689.0" style="-fx-background-color: #84869c;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ModifyActiviteController">
    <children>
-      <Pane layoutX="35.0" layoutY="23.0" prefHeight="476.0" prefWidth="531.0" style="-fx-background-color: #FFFF;">
+      <Pane layoutY="62.0" prefHeight="403.0" prefWidth="689.0" style="-fx-background-color: #393d72;">
          <children>
-            <Label layoutX="107.0" layoutY="97.0" text="Activité" />
-            <Label layoutX="96.0" layoutY="145.0" text="Description" />
-            <Label layoutX="114.0" layoutY="275.0" text="Date" />
-            <TextField fx:id="act_label" layoutX="163.0" layoutY="93.0" prefHeight="25.0" prefWidth="200.0" />
-            <TextArea fx:id="description_label" layoutX="166.0" layoutY="145.0" prefHeight="105.0" prefWidth="200.0" />
-            <Button fx:id="mod_btn" layoutX="221.0" layoutY="421.0" mnemonicParsing="false" onAction="#Modifier" prefHeight="34.0" prefWidth="91.0" text="Modifier" />
-            <Button fx:id="vider_btn" layoutX="390.0" layoutY="381.0" mnemonicParsing="false" onAction="#Vider" prefHeight="17.0" prefWidth="119.0" text="vider les champs" />
-            <Label layoutX="38.0" layoutY="34.0" prefHeight="34.0" prefWidth="138.0" text=" Nom de l'activité" />
-            <Button layoutX="340.0" layoutY="43.0" mnemonicParsing="false" onAction="#Trouver" text="Trouver" />
-            <TextField fx:id="date_picker" layoutX="191.0" layoutY="271.0" />
-            <ComboBox fx:id="Recherche" layoutX="158.0" layoutY="39.0" prefWidth="150.0" />
-            <Button fx:id="supp_btn" layoutX="125.0" layoutY="421.0" mnemonicParsing="false" onAction="#Supprimer" prefHeight="34.0" prefWidth="76.0" text="Supprimer" />
-            <Button fx:id="annuler_btn" layoutX="31.0" layoutY="421.0" mnemonicParsing="false" onAction="#Retour" prefHeight="34.0" prefWidth="76.0" text="Annuler" />
-            <Label layoutX="112.0" layoutY="333.0" text="Club : " />
-            <ComboBox fx:id="club_box" layoutX="188.0" layoutY="329.0" prefWidth="150.0" />
+            <Label layoutX="146.0" layoutY="32.0" text="Activité" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+            <Label layoutX="143.0" layoutY="99.0" text="Description" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+            <Label layoutX="154.0" layoutY="252.0" text="Date" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+            <TextField fx:id="act_label" layoutX="266.0" layoutY="28.0" prefHeight="25.0" prefWidth="281.0" />
+            <TextArea fx:id="description_label" layoutX="267.0" layoutY="89.0" prefHeight="118.0" prefWidth="281.0" />
+            <TextField fx:id="date_picker" layoutX="303.0" layoutY="248.0" prefHeight="25.0" prefWidth="207.0" />
+            <Label layoutX="150.0" layoutY="322.0" text="Club : " textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+            <ComboBox fx:id="club_box" layoutX="332.0" layoutY="318.0" prefWidth="150.0" />
+            <Line endX="588.0" layoutX="101.0" startX="-100.0" stroke="#6f6a5d" strokeWidth="3.0" />
+            <Line endX="588.0" layoutX="101.0" layoutY="403.0" startX="-100.0" stroke="#6f6a5d" strokeWidth="3.0" />
          </children>
       </Pane>
+      <ComboBox fx:id="Recherche" layoutX="160.0" layoutY="24.0" prefWidth="150.0" />
+      <Button layoutX="347.0" layoutY="23.0" mnemonicParsing="false" onAction="#Trouver" text="Trouver" />
+      <Label layoutX="14.0" layoutY="19.0" prefHeight="34.0" prefWidth="138.0" text=" Nom de l'activité" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Button fx:id="vider_btn" layoutX="556.0" layoutY="479.0" mnemonicParsing="false" onAction="#Vider" prefHeight="17.0" prefWidth="119.0" text="vider les champs" />
+      <Button fx:id="annuler_btn" layoutX="20.0" layoutY="475.0" mnemonicParsing="false" onAction="#Retour" prefHeight="34.0" prefWidth="76.0" text="Annuler" />
+      <Button fx:id="supp_btn" layoutX="104.0" layoutY="475.0" mnemonicParsing="false" onAction="#Supprimer" prefHeight="34.0" prefWidth="76.0" text="Supprimer" />
+      <Button fx:id="mod_btn" layoutX="190.0" layoutY="475.0" mnemonicParsing="false" onAction="#Modifier" prefHeight="34.0" prefWidth="91.0" text="Modifier" />
    </children>
 </AnchorPane>
