--- a/src/Views/ConsulterActivite.fxml
+++ b/src/Views/ConsulterActivite.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" fx:id="root" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #046380;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ConsulterActiviteController">
+<AnchorPane id="AnchorPane" fx:id="root" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #046380;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.ConsulterActiviteController">
    <children>
       <SplitPane dividerPositions="0.29797979797979796" layoutX="29.0" layoutY="25.0" prefHeight="356.0" prefWidth="541.0">
         <items>
