--- a/src/Views/ConsulterEnfant.fxml
+++ b/src/Views/ConsulterEnfant.fxml
@@ -3,11 +3,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" fx:id="root" prefHeight="462.0" prefWidth="685.0" style="-fx-background-color: #c71ec3;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.ConsulterEnfantController">
+<AnchorPane id="AnchorPane" fx:id="root" prefHeight="462.0" prefWidth="789.0" style="-fx-background-color: #c71ec3;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.ConsulterEnfantController">
   <children>
-      <TableView fx:id="afficher" layoutX="118.0" layoutY="33.0" prefHeight="279.0" prefWidth="564.0">
+      <TableView fx:id="afficher" layoutX="118.0" layoutY="33.0" prefHeight="279.0" prefWidth="666.0">
         <columns>
           <TableColumn fx:id="nom" prefWidth="75.0" text="Nom" />
           <TableColumn fx:id="prenom" prefWidth="89.60003662109375" text="Prenom" />
@@ -15,9 +17,14 @@
             <TableColumn fx:id="etat" prefWidth="92.800048828125" text="Etat" />
             <TableColumn fx:id="type" prefWidth="93.60000610351562" text="Type" />
             <TableColumn fx:id="dateex" prefWidth="92.0" text="Date Expiration" />
+            <TableColumn fx:id="tel" prefWidth="92.0" text="Telephone" />
         </columns>
       </TableView>
       <Button fx:id="aff" layoutX="14.0" layoutY="101.0" mnemonicParsing="false" onAction="#Afficher" prefHeight="26.0" prefWidth="92.0" text="Afficher" />
       <Button fx:id="ajou" layoutX="14.0" layoutY="160.0" mnemonicParsing="false" onAction="#redirect" prefHeight="26.0" prefWidth="92.0" text="Ajouter" />
+      <TextField fx:id="mod" layoutX="230.0" layoutY="363.0" />
+      <Text layoutX="93.0" layoutY="380.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type Abonnement" />
+      <Button fx:id="modifier" layoutX="471.0" layoutY="362.0" mnemonicParsing="false" onAction="#modify" prefHeight="26.0" prefWidth="105.0" text="Modifier" />
+      <Button fx:id="btn_sms" layoutX="14.0" layoutY="206.0" mnemonicParsing="false" onAction="#sms" prefHeight="26.0" prefWidth="92.0" text="Envoyer" />
    </children>
 </AnchorPane>
