--- a/src/Views/Club/AjoutClub.fxml
+++ b/src/Views/Club/AjoutClub.fxml
@@ -8,12 +8,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Line?>
-<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" fx:id="root" prefHeight="524.0" prefWidth="689.0" style="-fx-background-color: #84869c;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Club.AjoutClubController">
    <children>
-      <Pane fx:id="stage" layoutY="61.0" prefHeight="403.0" prefWidth="689.0" style="-fx-background-color: #393d72;">
+      <Pane fx:id="stage" layoutY="61.0" prefHeight="403.0" prefWidth="692.0" style="-fx-background-color: #393d72;">
          <children>
             <Label layoutX="163.0" layoutY="30.0" text="Nom du Club :" textFill="WHITE">
                <font>
@@ -32,8 +31,8 @@
             <ImageView fx:id="imageview" fitHeight="166.0" fitWidth="200.0" layoutX="282.0" layoutY="216.0" pickOnBounds="true" preserveRatio="true" />
             <Button fx:id="image_btn" layoutX="281.0" layoutY="181.0" mnemonicParsing="false" onAction="#uploadImage" text="Browse" />
             <TextField fx:id="image_area" layoutX="408.0" layoutY="238.0" visible="false" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c8cade22" height="178.0" layoutX="282.0" layoutY="210.0" stroke="#6f6a5d" strokeType="INSIDE" width="200.0" />
             <Line endX="588.0" layoutX="101.0" layoutY="403.0" startX="-100.0" stroke="#6f6a5d" strokeWidth="4.0" />
+            <ImageView fx:id="imageview" fitHeight="150.0" fitWidth="200.0" layoutX="282.0" layoutY="224.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </Pane>
       <Button fx:id="ajouter_btn" layoutX="579.0" layoutY="472.0" mnemonicParsing="false" onAction="#Ajouter" prefHeight="33.0" prefWidth="90.0" text="Ajouter" />
