--- a/src/Views/Club/ConsulterClub.fxml
+++ b/src/Views/Club/ConsulterClub.fxml
@@ -39,5 +39,6 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
+      <Button fx:id="afficher" layoutX="564.0" layoutY="117.0" mnemonicParsing="false" onAction="#TakeMeToAffichage" prefHeight="36.0" prefWidth="111.0" text="Affichage" />
    </children>
 </AnchorPane>
