--- a/src/Views/AdminEnfant.fxml
+++ b/src/Views/AdminEnfant.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane id="AnchorPane" fx:id="root" prefHeight="483.0" prefWidth="760.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.AdminEnfantController">
    <children>
-      <TableView fx:id="enfcons" layoutX="75.0" layoutY="36.0" prefHeight="332.0" prefWidth="590.0">
+      <TableView fx:id="enfcons" layoutX="77.0" layoutY="86.0" prefHeight="332.0" prefWidth="590.0">
         <columns>
           <TableColumn fx:id="nom" prefWidth="75.0" text="Nom" />
           <TableColumn fx:id="prenom" prefWidth="75.0" text="Prenom" />
@@ -16,6 +19,10 @@
             <TableColumn fx:id="parent" prefWidth="116.79998779296875" text="Parent" />
         </columns>
       </TableView>
-      <Button fx:id="btn_supp" layoutX="309.0" layoutY="403.0" mnemonicParsing="false" onAction="#supprimer" prefHeight="26.0" prefWidth="96.0" text="Supprimer" />
+      <Button fx:id="btn_supp" layoutX="310.0" layoutY="430.0" mnemonicParsing="false" onAction="#supprimer" prefHeight="26.0" prefWidth="96.0" text="Supprimer" />
+      <Text layoutX="77.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Recherche:" />
+      <TextField fx:id="txt_r" layoutX="172.0" layoutY="30.0" />
+      <ComboBox fx:id="cmb_r" layoutX="393.0" layoutY="30.0" prefWidth="150.0" promptText="Choix" />
+      <Button fx:id="btn_r" layoutX="596.0" layoutY="29.0" mnemonicParsing="false" onAction="#rechercher" prefHeight="26.0" prefWidth="123.0" text="Rechercher" />
    </children>
 </AnchorPane>
