--- a/src/Views/AjouterEnfant.fxml
+++ b/src/Views/AjouterEnfant.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" fx:id="root" prefHeight="443.0" prefWidth="657.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.AjouterEnfantController">
+<AnchorPane id="AnchorPane" fx:id="root" prefHeight="452.0" prefWidth="694.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.AjouterEnfantController">
    <children>
-      <TableView fx:id="afficher" layoutX="70.0" layoutY="23.0" prefHeight="279.0" prefWidth="564.0">
+      <TableView fx:id="afficher" layoutX="91.0" layoutY="86.0" prefHeight="279.0" prefWidth="602.0">
          <columns>
             <TableColumn fx:id="nom" prefWidth="75.0" text="Nom" />
             <TableColumn fx:id="prenom" prefWidth="89.60003662109375" text="Prenom" />
@@ -17,7 +20,14 @@
             <TableColumn fx:id="dateex" prefWidth="92.0" text="Date Expiration" />
          </columns>
       </TableView>
-      <Button fx:id="ajou" layoutX="218.0" layoutY="351.0" mnemonicParsing="false" onAction="#modif" prefHeight="26.0" prefWidth="79.0" text="Ajouter" />
-      <Button fx:id="supp" layoutX="352.0" layoutY="352.0" mnemonicParsing="false" onAction="#supprime" prefHeight="26.0" prefWidth="79.0" text="Supprimer" />
+      <Button fx:id="ajou" layoutX="245.0" layoutY="391.0" mnemonicParsing="false" onAction="#modif" prefHeight="26.0" prefWidth="79.0" text="Ajouter" />
+      <Button fx:id="supp" layoutX="387.0" layoutY="391.0" mnemonicParsing="false" onAction="#supprime" prefHeight="26.0" prefWidth="94.0" text="Supprimer" />
+      <Text fill="WHITE" layoutX="50.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Recherche:" />
+      <TextField fx:id="txt_re" layoutX="136.0" layoutY="26.0" />
+      <ComboBox fx:id="cmb_rec" layoutX="359.0" layoutY="26.0" prefWidth="150.0" promptText="Choix" />
+      <Button fx:id="btn_rc" layoutX="540.0" layoutY="26.0" mnemonicParsing="false" onAction="#rechercher" text="Rechercher" />
+      <Button fx:id="rtn" layoutX="561.0" layoutY="391.0" mnemonicParsing="false" onAction="#retour" prefHeight="26.0" prefWidth="75.0" text="Retour" />
+      <Text fill="WHITE" layoutX="654.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre demandes" />
+      <TextField fx:id="compt" alignment="CENTER" disable="true" layoutX="687.0" layoutY="25.0" opacity="0.69" prefHeight="26.0" prefWidth="48.0" />
    </children>
 </AnchorPane>
