--- a/src/Views/Club/ConsulterClub.fxml
+++ b/src/Views/Club/ConsulterClub.fxml
@@ -23,15 +23,13 @@
                   <TableColumn fx:id="Description" prefWidth="229.0" text="Description" />
               </columns>
             </TableView>
-            <TextArea fx:id="mod_descr" layoutX="177.0" layoutY="400.0" prefHeight="51.0" prefWidth="200.0" />
-            <TextField fx:id="mod_club" layoutX="20.0" layoutY="402.0" prefHeight="36.0" prefWidth="149.0" />
-            <Button fx:id="Supprimer" layoutX="409.0" layoutY="426.0" mnemonicParsing="false" onAction="#DELETE" prefHeight="25.0" prefWidth="111.0" text="Supprimer" />
-            <Button fx:id="Modifier" layoutX="409.0" layoutY="390.0" mnemonicParsing="false" onAction="#Modifier" prefHeight="23.0" prefWidth="111.0" text="Modifier" />
+            <TextArea fx:id="mod_descr" layoutX="177.0" layoutY="400.0" prefHeight="51.0" prefWidth="200.0" visible="false" />
+            <TextField fx:id="mod_club" layoutX="20.0" layoutY="402.0" prefHeight="36.0" prefWidth="149.0" visible="false" />
          </children>
       </Pane>
       <Line endX="450.5" endY="3.0" layoutX="101.0" layoutY="62.0" startX="-102.0" startY="3.0" stroke="#6f6a5d" strokeWidth="4.0" />
       <Line endX="-10.5" endY="359.0" layoutX="564.0" layoutY="190.0" startX="-10.5" startY="-125.0" stroke="#6f6a5d" strokeWidth="4.0" />
-      <Button layoutX="564.0" layoutY="213.0" mnemonicParsing="false" onAction="#web" prefHeight="36.0" prefWidth="111.0" text="Types des Clubs" />
+      <Button layoutX="564.0" layoutY="300.0" mnemonicParsing="false" onAction="#web" prefHeight="36.0" prefWidth="111.0" text="Types des Clubs" />
       <TextField fx:id="nom_text" layoutX="105.0" layoutY="23.0" />
       <Button fx:id="search" layoutX="261.0" layoutY="23.0" mnemonicParsing="false" onAction="#Search" prefHeight="25.0" prefWidth="66.0" text="Search" />
       <Label layoutX="34.0" layoutY="27.0" text="Rechercher" textFill="WHITE">
@@ -40,5 +38,7 @@
          </font>
       </Label>
       <Button fx:id="afficher" layoutX="564.0" layoutY="117.0" mnemonicParsing="false" onAction="#TakeMeToAffichage" prefHeight="36.0" prefWidth="111.0" text="Affichage" />
+      <Button fx:id="Modifier" layoutX="564.0" layoutY="202.0" mnemonicParsing="false" onAction="#Modifier" prefHeight="36.0" prefWidth="111.0" text="Modifier un Club" />
+      <Button fx:id="Supprimer" layoutX="564.0" layoutY="244.0" mnemonicParsing="false" onAction="#DELETE" prefHeight="36.0" prefWidth="111.0" text="Supprimer" />
    </children>
 </AnchorPane>
