--- a/src/Views/AdminEnfant.fxml
+++ b/src/Views/AdminEnfant.fxml
@@ -19,10 +19,10 @@
             <TableColumn fx:id="parent" prefWidth="116.79998779296875" text="Parent" />
         </columns>
       </TableView>
-      <Button fx:id="btn_supp" layoutX="310.0" layoutY="430.0" mnemonicParsing="false" onAction="#supprimer" prefHeight="26.0" prefWidth="96.0" text="Supprimer" />
+      <Button fx:id="btn_supp" layoutX="408.0" layoutY="431.0" mnemonicParsing="false" onAction="#supprimer" prefHeight="26.0" prefWidth="96.0" text="Supprimer" />
       <Text layoutX="77.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Recherche:" />
-      <TextField fx:id="txt_r" layoutX="172.0" layoutY="30.0" />
+      <TextField fx:id="txt_r" layoutX="172.0" layoutY="30.0" onKeyPressed="#rechercher" />
       <ComboBox fx:id="cmb_r" layoutX="393.0" layoutY="30.0" prefWidth="150.0" promptText="Choix" />
-      <Button fx:id="btn_r" layoutX="596.0" layoutY="29.0" mnemonicParsing="false" onAction="#rechercher" prefHeight="26.0" prefWidth="123.0" text="Rechercher" />
+      <Button fx:id="btn_pdf" layoutX="198.0" layoutY="431.0" mnemonicParsing="false" onAction="#generate" prefHeight="26.0" prefWidth="134.0" text="Génerer PDF" />
    </children>
 </AnchorPane>
