--- a/src/Views/ConsulterEnfant.fxml
+++ b/src/Views/ConsulterEnfant.fxml
@@ -28,8 +28,7 @@
       <Button fx:id="btn_sms" layoutX="14.0" layoutY="270.0" mnemonicParsing="false" onAction="#sms" prefHeight="26.0" prefWidth="92.0" text="Envoyer" />
       <ComboBox fx:id="modi" layoutX="416.0" layoutY="393.0" prefWidth="150.0" promptText="Choix" />
       <ComboBox fx:id="list_rec" layoutX="330.0" layoutY="34.0" prefWidth="150.0" promptText="Choix" />
-      <Button fx:id="btn_rec" layoutX="513.0" layoutY="34.0" mnemonicParsing="false" onAction="#rechercher" prefHeight="26.0" prefWidth="106.0" text="Rechercher" />
-      <TextField fx:id="txt_rech" layoutX="116.0" layoutY="34.0" />
+      <TextField fx:id="txt_rech" layoutX="116.0" layoutY="34.0" onKeyTyped="#rechercher" />
       <Text fill="WHITE" layoutX="31.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Recherche:" />
       <Button fx:id="supp" layoutX="14.0" layoutY="393.0" mnemonicParsing="false" onAction="#supprimer" prefHeight="26.0" prefWidth="92.0" text="Supprimer" />
       <Text fill="WHITE" layoutX="670.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre adhérents" />
