some modification!! prob with Date

--- a/src/Views/Club/ConsulterClub.fxml
+++ b/src/Views/Club/ConsulterClub.fxml
@@ -30,8 +30,7 @@
       <Line endX="450.5" endY="3.0" layoutX="101.0" layoutY="62.0" startX="-102.0" startY="3.0" stroke="#6f6a5d" strokeWidth="4.0" />
       <Line endX="-10.5" endY="359.0" layoutX="564.0" layoutY="190.0" startX="-10.5" startY="-125.0" stroke="#6f6a5d" strokeWidth="4.0" />
       <Button layoutX="564.0" layoutY="300.0" mnemonicParsing="false" onAction="#web" prefHeight="36.0" prefWidth="111.0" text="Types des Clubs" />
-      <TextField fx:id="nom_text" layoutX="105.0" layoutY="23.0" />
-      <Button fx:id="search" layoutX="261.0" layoutY="23.0" mnemonicParsing="false" onAction="#Search" prefHeight="25.0" prefWidth="66.0" text="Search" />
+      <TextField fx:id="nom_text" layoutX="105.0" layoutY="23.0" onKeyPressed="#Search" prefHeight="25.0" prefWidth="186.0" />
       <Label layoutX="34.0" layoutY="27.0" text="Rechercher" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
