--- a/src/Views/ConsulterActivite.fxml
+++ b/src/Views/ConsulterActivite.fxml
@@ -17,7 +17,7 @@
       <Button fx:id="modifier_btn" layoutX="558.0" layoutY="206.0" mnemonicParsing="false" onAction="#redirect2" prefHeight="25.0" prefWidth="125.0" text="Modifier" />
       <Button fx:id="btn" layoutX="557.0" layoutY="172.0" mnemonicParsing="false" onAction="#redirect" prefHeight="25.0" prefWidth="125.0" text="Ajouter" />
       <ComboBox fx:id="club_box" layoutX="172.0" layoutY="23.0" prefWidth="150.0" />
-      <Button fx:id="det_btn" layoutX="336.0" layoutY="23.0" mnemonicParsing="false" onAction="#Detail" prefHeight="25.0" prefWidth="61.0" text="Afficher" />
+      <Button fx:id="det_btn" layoutX="336.0" layoutY="23.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="61.0" text="Afficher" />
       <Label layoutX="63.0" layoutY="27.0" text="Choisir le Club : " textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
@@ -33,12 +33,11 @@
               </columns>
             </TableView>
             <Line endX="-96.0" endY="460.0" layoutX="645.0" layoutY="1.0" startX="-96.0" startY="1.1213226318359375" stroke="#6f6a5d" strokeWidth="3.0" />
-            <TextField fx:id="search_txt" layoutX="285.0" layoutY="14.0" prefHeight="17.0" prefWidth="149.0" />
-            <Button layoutX="456.0" layoutY="14.0" mnemonicParsing="false" onAction="#Search" text="Search" />
+            <TextField fx:id="search_txt" layoutX="376.0" layoutY="14.0" onKeyPressed="#Search" prefHeight="17.0" prefWidth="149.0" />
          </children>
       </Pane>
       <Line endX="440.0" endY="1.0" layoutX="109.0" layoutY="62.0" startX="-109.0" startY="1.0" stroke="#6f6a5d" strokeWidth="3.0" />
       <Button fx:id="qr" layoutX="558.0" layoutY="269.0" mnemonicParsing="false" onAction="#qrCode" prefHeight="25.0" prefWidth="125.0" text="QR" />
-      <Button fx:id="weather_btn" layoutX="558.0" layoutY="304.0" mnemonicParsing="false" onAction="#TakeMeToWeather" prefHeight="25.0" prefWidth="125.0" text="WEATHER" />
+      <Button fx:id="weather_btn" layoutX="558.0" layoutY="304.0" mnemonicParsing="false" onAction="#TakeMeToWeather" prefHeight="25.0" prefWidth="125.0" text="METEO" />
    </children>
 </AnchorPane>
