--- a/src/Views/Club/ModifierClub.fxml
+++ b/src/Views/Club/ModifierClub.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -11,8 +10,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" fx:id="root" prefHeight="425.0" prefWidth="689.0" style="-fx-background-color: #84869c;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="Views.Club.ModifierClubController">
+<AnchorPane id="AnchorPane" fx:id="root" prefHeight="425.0" prefWidth="689.0" style="-fx-background-color: #84869c;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Club.ModifierClubController">
    <children>
       <Pane layoutY="54.0" prefHeight="313.0" prefWidth="689.0" style="-fx-background-color: #393d72;">
          <children>
@@ -39,12 +37,6 @@
             <Line endX="588.0" layoutX="101.0" layoutY="313.0" startX="-100.0" stroke="#6f6a5d" strokeWidth="4.0" />
          </children>
       </Pane>
-      <ComboBox fx:id="combo" layoutX="278.0" layoutY="13.0" prefHeight="25.0" prefWidth="170.0" />
-      <Button fx:id="club" layoutX="478.0" layoutY="10.0" mnemonicParsing="false" onAction="#Trouver" prefHeight="31.0" prefWidth="87.0" text="Find">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Button>
       <Button fx:id="Modifier" layoutX="565.0" layoutY="372.0" mnemonicParsing="false" onAction="#Modifier" prefHeight="37.0" prefWidth="80.0" text="Modifier">
          <font>
             <Font name="System Bold" size="12.0" />
