--- a/src/Views/ModifyActivite.fxml
+++ b/src/Views/ModifyActivite.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -28,7 +29,6 @@
                </font></Label>
             <TextField fx:id="act_label" layoutX="266.0" layoutY="28.0" prefHeight="25.0" prefWidth="281.0" />
             <TextArea fx:id="description_label" layoutX="267.0" layoutY="89.0" prefHeight="118.0" prefWidth="281.0" />
-            <TextField fx:id="date_picker" layoutX="303.0" layoutY="248.0" prefHeight="25.0" prefWidth="207.0" />
             <Label layoutX="150.0" layoutY="322.0" text="Club : " textFill="WHITE">
                <font>
                   <Font name="System Bold" size="12.0" />
@@ -36,6 +36,7 @@
             <ComboBox fx:id="club_box" layoutX="332.0" layoutY="318.0" prefWidth="150.0" />
             <Line endX="588.0" layoutX="101.0" startX="-100.0" stroke="#6f6a5d" strokeWidth="3.0" />
             <Line endX="588.0" layoutX="101.0" layoutY="403.0" startX="-100.0" stroke="#6f6a5d" strokeWidth="3.0" />
+            <DatePicker fx:id="date_picker" layoutX="321.0" layoutY="240.0" />
          </children>
       </Pane>
       <ComboBox fx:id="Recherche" layoutX="160.0" layoutY="24.0" prefWidth="150.0" />
