--- a/src/Views/Club/ConsulterClub.fxml
+++ b/src/Views/Club/ConsulterClub.fxml
@@ -13,10 +13,10 @@
 
 <AnchorPane id="AnchorPane" fx:id="root" prefHeight="553.0" prefWidth="689.0" style="-fx-background-color: #84869c;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Club.ConsulterClubController">
    <children>
-      <Button fx:id="Ajouter" layoutX="564.0" layoutY="160.0" mnemonicParsing="false" onAction="#Ajouter" prefHeight="36.0" prefWidth="111.0" text="Ajouter un Club" />
+      <Button fx:id="Ajouter" layoutX="564.0" layoutY="160.0" mnemonicParsing="false" onAction="#Ajouter" prefHeight="25.0" prefWidth="111.0" text="Ajouter un Club" />
       <Pane layoutX="-1.0" layoutY="65.0" prefHeight="490.0" prefWidth="556.0" style="-fx-background-color: #393d72;">
          <children>
-            <TableView fx:id="club_liste" layoutX="14.0" layoutY="25.0" prefHeight="354.0" prefWidth="506.0">
+            <TableView fx:id="club_liste" layoutX="25.0" layoutY="66.0" prefHeight="354.0" prefWidth="506.0">
               <columns>
                 <TableColumn fx:id="Photo" prefWidth="60.0" />
                 <TableColumn fx:id="nom_Club" prefWidth="216.0" text="Club" />
@@ -25,19 +25,19 @@
             </TableView>
             <TextArea fx:id="mod_descr" layoutX="177.0" layoutY="400.0" prefHeight="51.0" prefWidth="200.0" visible="false" />
             <TextField fx:id="mod_club" layoutX="20.0" layoutY="402.0" prefHeight="36.0" prefWidth="149.0" visible="false" />
+            <TextField fx:id="nom_text" layoutX="345.0" layoutY="33.0" onKeyPressed="#Search" prefHeight="25.0" prefWidth="186.0" />
+            <Label layoutX="270.0" layoutY="37.0" text="Rechercher :" textFill="WHITE">
+               <font>
+                  <Font name="Calibri Bold" size="14.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
       <Line endX="450.5" endY="3.0" layoutX="101.0" layoutY="62.0" startX="-102.0" startY="3.0" stroke="#6f6a5d" strokeWidth="4.0" />
       <Line endX="-10.5" endY="359.0" layoutX="564.0" layoutY="190.0" startX="-10.5" startY="-125.0" stroke="#6f6a5d" strokeWidth="4.0" />
-      <Button layoutX="564.0" layoutY="300.0" mnemonicParsing="false" onAction="#web" prefHeight="36.0" prefWidth="111.0" text="Types des Clubs" />
-      <TextField fx:id="nom_text" layoutX="105.0" layoutY="23.0" onKeyPressed="#Search" prefHeight="25.0" prefWidth="186.0" />
-      <Label layoutX="34.0" layoutY="27.0" text="Rechercher" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
-      <Button fx:id="afficher" layoutX="564.0" layoutY="117.0" mnemonicParsing="false" onAction="#TakeMeToAffichage" prefHeight="36.0" prefWidth="111.0" text="Affichage" />
-      <Button fx:id="Modifier" layoutX="564.0" layoutY="202.0" mnemonicParsing="false" onAction="#Modifier" prefHeight="36.0" prefWidth="111.0" text="Modifier un Club" />
-      <Button fx:id="Supprimer" layoutX="564.0" layoutY="244.0" mnemonicParsing="false" onAction="#DELETE" prefHeight="36.0" prefWidth="111.0" text="Supprimer" />
+      <Button layoutX="564.0" layoutY="311.0" mnemonicParsing="false" onAction="#web" prefHeight="25.0" prefWidth="111.0" text="Types des Clubs" />
+      <Button fx:id="afficher" layoutX="564.0" layoutY="128.0" mnemonicParsing="false" onAction="#TakeMeToAffichage" prefHeight="25.0" prefWidth="111.0" text="Affichage" />
+      <Button fx:id="Modifier" layoutX="564.0" layoutY="192.0" mnemonicParsing="false" onAction="#Modifier" prefHeight="25.0" prefWidth="111.0" text="Modifier un Club" />
+      <Button fx:id="Supprimer" layoutX="564.0" layoutY="227.0" mnemonicParsing="false" onAction="#DELETE" prefHeight="25.0" prefWidth="111.0" text="Supprimer" />
    </children>
 </AnchorPane>
